--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <main>
     <section class="welcome" id="welcome">
-        <h2 class="presentation">BIENVENIDOS!</h2>
+        <h2 class="presentation">hola!</h2>
         
     </section>
 
@@ -58,6 +58,10 @@
     <section class="servicios" id="servicios">
         <h1>LOREM</h1>
 
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro quae perspiciatis, sint nam quisquam cupiditate sequi nulla qui magnam, sapiente accusantium minus accusamus. Adipisci laboriosam qui deleniti voluptatem reiciendis debitis?
+        In similique rem praesentium, delectus iusto dolore aperiam fuga autem molestias facere maxime at pariatur dolorum illum sapiente, non, ab facilis harum eum quia. Culpa consequuntur amet voluptatibus aspernatur libero?</p>
     </section>
 </main>
 
@@ -116,6 +120,6 @@
             <b>CUBA, PALMA SORIANO</b>
             <b>DARWIN ALEJANDRO</b>
         </div>
-    </footer>  
+    </footer>   
 </body>
 </html>
